# pyclibrary

./: .coveragec  .coveragerc  .gitignore  .spyderproject  .travis.yml  AUTHORS  CHANGES  LICENSE  MANIFEST.in  README  README.md  README.rst  azure-pipelines.yml  codecov.yml  pyproject.toml  readthedocs.yml  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  pyclibrary.rst
docs/source/api_ref/: index.rst  pyclibrary.backends.rst
docs/source/arch_ref/: index.rst
docs/source/faqs/: index.rst
docs/source/get_started/: basic_usage.rst  configuration.rst  index.rst  installation.rst
pyclibrary/: __init__.py  c_library.py  c_model.py  c_parser.py  code_layouter.py  errors.py  init.py  utils.py  version.py
pyclibrary/asts/: __init__.py  astcore.py  c.py  python.py
pyclibrary/backends/: __init__.py  code_layouter.py  ctypes.py  ctypes_bindings.py  pep8_formatter.py
pyclibrary/headers/: README  WinDefs.cache  check_WinDefs.py  update_WinDefs.py
tests/: test_code_layouter.py  test_init.py  test_library.py  test_model.py  test_parser.py  test_utils.py  test_version.py
tests/asts/: test_astcore.py  test_c.py
tests/backends/: test_code_layouter.py  test_ctypes.py  test_ctypes_bindings.py  test_pep8_formatter.py
tests/headers/: ctypes_test.h  enums.h  functions.h  structs.h  typedefs.h  unions.h  variables.h
tests/headers/file_handling/: c_comments.h  c_comments_removed.h  cpp_comments.h  cpp_comments_removed.h  multi_file1.h  multi_file2.h  multi_file3.h  replace.h  test.h  test2.h
tests/headers/macros/: macro_conditionals.h  macro_functions.h  macro_invalid.h  macro_values.h  pragmas.h
